# krita

./: .arcconfig  .clang-format  .clang-tidy  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitlab-ci.script  .gitlab-ci.yml  .kde-ci.yml  .lgtm.yml  .mailmap  AUTHORS  CMakeLists.txt  CODE_OF_CONDUCT.md  COPYING  COPYING.LIB  CTestConfig.cmake  CalligraProducts.cmake  D6314.diff  ExtraDesktop.sh  HACKING  HACKING.gitlab-ci.md  KoAlwaysInline.h  KoConfig.h.cmake  KoIcon.h  KoTestConfig.h.cmake  KritaProducts.cmake  Mainpage.dox  Messages.sh  PythonWindowsCheck.cmake  README  README.android  README.android.md  README.md  README.packagers.md  README_PACKAGERS.md  a  action_i18n.pl  calligra_xgettext.sh  changelog  (+39 more)
3rdparty_plugins/: CMakeLists.txt
3rdparty_plugins/ext_gmic/: 0001-Add-Krita-native-plugin.patch  0001-First-working-version-of-the-GMic-Qt-Krita-native-pl.patch  0001-force-turn-off-aligned_alloc.patch  0002-Add-desktop-entry.patch  0002-Add-support-for-MSVC.patch  0002-Remove-shared-segment-infrastructure.patch  0003-Add-Android-support.patch  0003-Refactor-into-a-completely-Krita-native-plugin.patch  0004-Enable-all-input-modes-for-Krita-plugin.patch  0004-Make-FFTW3-truly-optional.patch  0005-Disable-GMic-Qt-s-own-theming-for-Krita.patch  0005-Update-function-signatures-to-2.9.6.patch  0006-Add-flag-to-disable-internet-access-by-default.patch  0006-Add-support-for-MSVC.patch  0007-Disable-GMic-Qt-s-own-theming-for-Krita.patch  0007-Increase-on-launch-update-timeout-to-60s.patch  0008-Add-flag-to-disable-internet-access-by-default.patch  0008-Enable-respecting-host-application-language.patch  0009-Increase-on-launch-update-timeout-to-60s.patch  0009-Respect-settings-location-for-hosted-builds.patch  0010-Disable-Internet-updates-in-Krita.patch  CMakeLists.txt  download_llvm-cmake_modules.cmake
3rdparty_vendor/raqm/: 0001-Add-arbitrary-run-break-function.patch  0002-Fix-Unicode-codepoint-conversion-from-UTF-16.patch  CMakeLists.txt
benchmarks/: CMakeLists.txt  KisAnimationRenderingBenchmark.cpp  KisAnimationRenderingBenchmark.h  KisFourPointInterpolatorBenchmark.cpp  KisFourPointInterpolatorBenchmark.h  KisLiquifyTransformWorkerBenchmark.cpp  KisLiquifyTransformWorkerBenchmark.h  kis_bcontrast_benchmark.cpp  kis_bcontrast_benchmark.h  kis_benchmark_values.h  kis_blur_benchmark.cpp  kis_blur_benchmark.h  kis_composition_benchmark.cpp  kis_composition_benchmark.h  kis_datamanager_benchmark.cpp  kis_datamanager_benchmark.h  kis_fast_math_benchmark.cpp  kis_fast_math_benchmark.h  kis_filter_selections_benchmark.cpp  kis_filter_selections_benchmark.h  kis_floodfill_benchmark.cpp  kis_floodfill_benchmark.h  kis_gradient_benchmark.cpp  kis_gradient_benchmark.h  kis_hline_iterator_benchmark.cpp  kis_hline_iterator_benchmark.h  kis_level_filter_benchmark.cpp  kis_level_filter_benchmark.h  kis_low_memory_benchmark.cpp  kis_low_memory_benchmark.h  kis_low_memory_benchmark_show_report.m  kis_mask_generator_benchmark.cpp  kis_mask_generator_benchmark.h  kis_painter_benchmark.cpp  kis_painter_benchmark.h  kis_projection_benchmark.cpp  kis_projection_benchmark.h  kis_random_iterator_benchmark.cpp  kis_random_iterator_benchmark.h  kis_stroke_benchmark.cpp  (+6 more)
benchmarks/data/: AutoBrush_70px_rotated.kpp  README  colorsmudge.kpp  deform-default.kpp  dyna301.kpp  experimental.kpp  filterOp_gauss.kpp  hairy-70px.kpp  hairy30inkDepletion1.kpp  hairybrush_thesis30px_antialiasing1.kpp  roundmarker05px.kpp  roundmarker40px.kpp  slow-smudge.kpp  softbrush-300px.kpp  softbrush-70px.kpp  softbrush_opacity1.kpp  sumi70radius.kpp
cmake/modules/: CMakeCPCHCompiler.cmake.in  CMakeCPCHInformation.cmake  CMakeCXXPCHCompiler.cmake.in  CMakeDetermineCPCHCompiler.cmake  CMakeDetermineCXXPCHCompiler.cmake  CMakeLists.txt  CMakePCHCompiler.cmake  CMakeTestCXXPCHCompiler.cmake  COPYING-CMAKE-SCRIPTS  CalligraProductSetMacros.cmake  CheckAtomic.cmake  CheckLibTIFFPSDSupport.cmake  FindAssImp.cmake  FindAvTranscoder.cmake  FindCalligraLibs.cmake.in  FindCalligraMarble.cmake  FindCalligraPostgreSQL.cmake  FindCalligraSqlite.cmake  FindCauchy.cmake  FindCreateResources.cmake  FindDCMTK.cmake  FindEigen.cmake  FindEigen2.cmake  FindEigen3.cmake  FindExif.cmake  FindExiv2.cmake  FindFFTW3.cmake  FindFFmpeg.cmake  FindFontconfig.cmake  FindFreeTDS.cmake  FindFreetype.cmake  FindFriBidi.cmake  FindGIF2.cmake  FindGLEW.cmake  FindGLIB.cmake  FindGLPK.cmake  FindGLU.cmake  FindGLUT.cmake  FindGMM.cmake  FindGOBJECT.cmake  (+100 more)
data/palettes/: 1-classic-kit.gpl  CMakeLists.txt  Nature_stones.gpl  Nature_wood.gpl  Paletilla.gpl  Untitled.gpl  bugslife_final.png-10.gpl  marker.gpl  mi-paleta-2009.aco.gpl  new_kde.gpl  photoshop-swatches-sketchlings-swatches.aco.gpl  pixelart-16.gpl  pixelart-32.gpl  ps.gpl  swatch-cmyk.gpl  swatch-colored-grey.gpl  swatch-rgb.gpl  testgimp_swatches.aco.gpl
interfaces/: CMakeLists.txt  KoChartInterface.h  KoChartModel.cpp  KoChartModel.h  KoGenericRegistry.h  KoGenericRegistryModel.h  KoID.h  KoTableInterface.h  Makefile.am  SimpleTextShapeInterface.h  koChart.cc  koChart.h  kochart_export.h
krita/: .krazy  AUTHORS  CMakeLists.txt  CRASHES  ChangeLog  DESIGN  FilterTodo  HACKING  IMAGE_LIBRARIES  Info.plist.template  Mainpage.dox  Makefile.am  Makefile.cvs  Messages.sh  README  README.CVS  README.PREVIEW  SHORTCOMINGS  TODO  TODO-1.4  UIcomments  action_i18n.pl  callgrind.out.27603  config-glew.h.cmake  config-krita.h.cmake  config-ocio.h.cmake  config-vc.h.cmake  configure.in.bot  configure.in.in  design.h  dummy.cc  err  extracti18n.pl  kis_crash_handler.cpp  kis_crash_handler.h  kis_splash_screen.cpp  kis_splash_screen.h  krita.action  krita.actions  krita.alpha  (+27 more)
krita/animator/: CMakeLists.txt  krita_animationdock.desktop  krita_part_init.cpp  kritaanimation.desktop  main.cpp  (+5 more)
libs/: .krazy  CHANGES  CMakeLists.txt  LIBRARY-REORG  Mainpage.dox  Makefile.am  Messages.sh  NAMING  README  configure.in.in  configure.in.mid  kdoc.rules  templatescript.sh
pics/: CMakeLists.txt  Makefile.am  icons.qrc
plugins/: .krazy  CMakeLists.txt  Mainpage.dox  Makefile.am  configure.in.in
(+30253 files in other folders)
